--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
-asyncio
+asyncio~=3.4.3
 # sse
-aiohttp
+aiohttp~=3.8.4
 aiohttp_jinja2
-jinja2
+jinja2~=3.1.2
 asyncio-sse
 faster-whisper
 # flask_sse
 grpcio
 grpcio-tools
 openai-whisper
-pyaudio
+pyaudio~=0.2.13
 pyannote.audio #==0.0.1
-setuptools
-ssdpy
-torch  #==1.11.0
+setuptools~=65.6.3
+ssdpy~=0.4.1
+torch~=2.0.0
 whisperx @ git+https://github.com/m-bain/whisperx
+
+numpy~=1.24.3
+whisper~=1.1.10
+Flask~=2.3.2
