--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build --tag nalbion/whisper_server:$(date +%s) .
+
+    - name: docker-login
+      uses: docker/login-action@v2
+      with:
+        username: ${{ env.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
       
     - name: Deploy to Docker Hub
-      run: |
-        echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-        docker push docker.io/nalbion/whisper_server:latest
+      run: docker push docker.io/nalbion/whisper_server:latest
